--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "build": "cd client && npm run build",
-	"react-dev": "cd client && npm start",
-	"develop": "concurrently --kill-others \"npm run react-dev\" \"nodemon server.js\""
+    "react-dev": "cd client && npm start",
+    "develop": "concurrently --kill-others \"npm run react-dev\" \"nodemon server.js\""
   },
   "repository": {
     "type": "git",
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/cutejs/express-react-app#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "nekodb": "^2.0.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.1"
